@startuml
title Core Maritime System ER Diagram

skinparam backgroundColor #F8F9FA
skinparam shadowing true
skinparam defaultFontName Arial

skinparam entity {
    BackgroundColor #E8F5E8
    BorderColor #388E3C
}

skinparam relationship {
    LineColor #424242
    FontColor #424242
}

entity "clients" as clients {
    *id: UUID PK
    --
    *name: VARCHAR(100)
    *client_type: ENUM(individual,company)
    tax_id: VARCHAR(50) UK
    email: VARCHAR(100) UK
    phone: VARCHAR(20)
    address: TEXT
    *country: VARCHAR(50)
    contact_person: VARCHAR(100)
    *is_active: VARCHAR(10)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "vessels" as vessels {
    *id: UUID PK
    --
    *name: VARCHAR(100)
    *imo_number: VARCHAR(10) UK
    *flag_country: VARCHAR(50)
    *vessel_type: VARCHAR(50)
    *deadweight_tonnage: INTEGER
    *gross_tonnage: INTEGER
    length_overall: FLOAT
    beam: FLOAT
    draft: FLOAT
    max_containers: INTEGER
    max_cargo_weight: FLOAT
    *status: ENUM(active,inactive,maintenance,decommissioned)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "ports" as ports {
    *id: UUID PK
    --
    *name: VARCHAR(100)
    *code: VARCHAR(5) UK
    *country: VARCHAR(50)
    city: VARCHAR(50)
    latitude: FLOAT
    longitude: FLOAT
    timezone: VARCHAR(50)
    *is_active: BOOLEAN
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "routes" as routes {
    *id: UUID PK
    --
    *name: VARCHAR(100)
    *route_code: VARCHAR(20) UK
    *departure_port_id: UUID FK
    *arrival_port_id: UUID FK
    *distance: FLOAT
    *estimated_duration: INTEGER
    *status: ENUM(active,inactive,seasonal)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "containers" as containers {
    *id: UUID PK
    --
    *container_number: VARCHAR(11) UK
    *container_type: ENUM(dry_20,dry_40,reefer_20,reefer_40,open_top,flat_rack,tank)
    *max_weight: FLOAT
    *max_volume: FLOAT
    current_weight: FLOAT
    current_volume: FLOAT
    *status: ENUM(empty,loaded,in_transit,at_port,delivered,damaged,maintenance)
    current_location_id: UUID FK
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "locations" as locations {
    *id: UUID PK
    --
    *name: VARCHAR(100)
    *type: ENUM(port,warehouse,depot,customs)
    address: TEXT
    city: VARCHAR(50)
    *country: VARCHAR(50)
    latitude: FLOAT
    longitude: FLOAT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "contracts" as contracts {
    *id: UUID PK
    --
    *contract_number: VARCHAR(50) UK
    *client_id: UUID FK
    contract_type: VARCHAR(50)
    start_date: DATE
    end_date: DATE
    terms: TEXT
    currency: VARCHAR(3)
    total_value: FLOAT
    *status: ENUM(draft,active,expired,terminated)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "shipments" as shipments {
    *id: UUID PK
    --
    *shipment_number: VARCHAR(50) UK
    bill_of_lading: VARCHAR(50) UK
    *vessel_id: UUID FK
    *route_id: UUID FK
    contract_id: UUID FK
    *departure_date: TIMESTAMP
    *estimated_arrival: TIMESTAMP
    actual_arrival: TIMESTAMP
    *status: ENUM(planned,booked,loading,in_transit,at_port,unloading,completed,cancelled,delayed)
    total_containers: INTEGER
    total_weight: FLOAT
    special_instructions: TEXT
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "cargo" as cargo {
    *id: UUID PK
    --
    *tracking_number: VARCHAR(50) UK
    *description: TEXT
    *cargo_type: ENUM(general,perishable,dangerous,fragile,liquid,bulk)
    *weight: FLOAT
    *volume: FLOAT
    is_fragile: BOOLEAN
    is_dangerous: BOOLEAN
    temperature_required: FLOAT
    packaging_type: VARCHAR(50)
    value: FLOAT
    *status: ENUM(pending,loaded,in_transit,delivered,damaged,lost)
    *client_id: UUID FK
    container_id: UUID FK
    shipment_id: UUID FK
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "events" as events {
    *id: UUID PK
    --
    *shipment_id: UUID FK
    *event_type: VARCHAR(50)
    *event_timestamp: TIMESTAMP
    location_id: UUID FK
    description: TEXT
    status_change: VARCHAR(50)
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "personnel" as personnel {
    *id: UUID PK
    --
    *name: VARCHAR(100)
    *position: VARCHAR(50)
    email: VARCHAR(100)
    phone: VARCHAR(20)
    vessel_id: UUID FK
    *employee_type: ENUM(crew,officer,captain,shore_support)
    certification: TEXT
    *is_active: BOOLEAN
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

' Relationships
clients ||--o{ cargo : "owns"
clients ||--o{ contracts : "signs"

vessels ||--o{ shipments : "carries"
vessels ||--o{ personnel : "employs"

ports ||--o{ routes : "departure from"
ports ||--o{ routes : "arrival to"

routes ||--o{ shipments : "defines"

containers ||--o{ cargo : "contains"
locations ||--o{ containers : "located at"

contracts ||--o{ shipments : "covers"

shipments ||--o{ cargo : "transports"
shipments ||--o{ events : "generates"

locations ||--o{ events : "occurs at"

' Notes
note top of vessels
  **Vessel Management**
  - IMO number unique identifier
  - Capacity and specifications
  - Status tracking for operations
end note

note top of shipments
  **Shipment Tracking**
  - Bill of lading integration
  - Route and vessel assignment
  - Complete lifecycle management
end note

note bottom of cargo
  **Cargo Management**
  - Dangerous and fragile handling
  - Temperature requirements
  - Value and insurance tracking
end note

note right of routes
  **Route Planning**
  - Port-to-port connections
  - Distance and duration
  - Seasonal availability
end note

note left of events
  **Event Tracking**
  - Real-time shipment updates
  - Location-based events
  - Status change history
end note

@enduml
